Prevent blurred h5p iframe on top of footer nav

--- a/styles/hide-h5p-for-anonymous-users.scss
+++ b/styles/hide-h5p-for-anonymous-users.scss
@@ -5,17 +5,13 @@ $light-blue: #d0ece9;
 
 // Blur H5P Content for anonymous users, and center the log in button over it.
 .anonymous {
-	.h5p-iframe-wrapper {
-		position: relative;
-	}
 
 	.h5p-restricted-message {
 		position: absolute;
 		text-align: center;
 		top: 33%;
 		width: 100%;
-		// Needs to be above h5p.css .h5p-iframe-wrapper iframe.h5p-iframe z-index of 10.
-		z-index: 11;
+		z-index: 1;
 
 		a {
 			background-color: $light-blue;
@@ -32,11 +28,19 @@ $light-blue: #d0ece9;
 		}
 	}
 
+	.h5p-iframe-wrapper {
+		position: relative;
+		z-index: 0;
+
+		iframe.h5p-iframe {
+			z-index: 0;
+		}
+	}
+
 	.h5p-iframe,
 	.h5p-container,
 	.h5p-actions {
 		filter: blur(5px);
 		pointer-events: none;
-		z-index: 0;
 	}
 }
